<resources>
    <string name="app_name" >Yijing</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
	<string name="action_preface">Preface</string>
    <string name="main_title">��\t\t��\t\t��\t\t��</string>
	<string name="OK">OK</string>
	<string name="ver_title">Version</string>
	<string name="ver_info">V0.1</string>
	<string name="action_prev_tag">Previous one</string>
	<string name="warn_no_pre_info_title">Remind</string>
	<string name="warn_no_pre_info">You don\'t have a ever before</string>
	<string name="qian_name">ǬΪ�� Ǭ��Ǭ��</string>
	<string name="qian_title">��Ǭ����Ԫ������</string>
	<string name="qian_1">���ţ�Ǳ�������á�</string>
	<string name="qian_2">�Ŷ�����������������ˡ�</string>
	<string name="qian_3">��������������ǬǬ��Ϧ������,�޾̡�</string>
	<string name="qian_4">���ģ���Ծ��Ԩ���޾̡�</string>
	<string name="qian_5">���壺�������죬�������ˡ�</string>
	<string name="qian_6">�Ͼţ��������лڡ�</string>
	<string name="qian_use">�þţ���Ⱥ�����ף�����</string>
	<string name="qian_tuanci">����ǬԪ��������ʼ����ͳ�졣������ʩ��Ʒ�����Ρ�������ʼ����λʱ�ɣ�ʱ�����������졣Ǭ���仯����������������̫�ͣ������ꡣ�׳�������������</string>
	<string name="qian_bigLike">���У�������������ǿ��Ϣ��</string>
	<string name="qian_small_L1">Ǳ�����ã�������Ҳ�����������ʩ��Ҳ������ǬǬ��������Ҳ����Ծ��Ԩ�����޾�Ҳ���������죬������Ҳ�������лڣ�ӯ���ɾ�Ҳ���þţ���²���Ϊ��Ҳ��</string>
	<string name="qian_small_L2">���������ʩ��Ҳ��</string>
	<string name="qian_small_L3">����ǬǬ��������Ҳ��</string>
	<string name="qian_small_L4">��Ծ��Ԩ�����޾�Ҳ��</string>
	<string name="qian_small_L5">�������죬������Ҳ��</string>
	<string name="qian_small_L6">�����лڣ�ӯ���ɾ�Ҳ��</string>
	<string name="qian_small_Luse">�þţ���²���Ϊ��Ҳ��</string>
	<string name="kun_name">��Ϊ�� ��������</string>
	<string name="kun_title">��������Ԫ�ࡣ������֮�ꡣ���������������ԣ���������������ϵ��󣬶���ɥ�󡣰��꼪��</string>
	<string name="kun_1">��������˪���������</string>
	<string name="kun_2">������ֱ�������󣬲�ϰ���޲�����</string>
	<string name="kun_3">���������£����꣬������£��޳����ա�</string>
	<string name="kun_4">���ģ����ҩr�o�̣��o�u��</string>
	<string name="kun_5">���壬���ѣ�Ԫ����</string>
	<string name="kun_6">��������ս��Ұ����Ѫ���ơ�</string>
	<string name="kun_use">�����������ꡣ</string>
	<string name="kun_tuanci">������Ԫ��������������˳���졣��������º��޽���������Ʒ���̺ࡣ������࣬�е��޽�����˳���ꡣ�������У�����ʧ������˳�ó������ϵ����������У�����ɥ���������졣����֮����Ӧ���޽���</string>
	<string name="kun_bigLike">���ƣ����������Ժ�����</string>
	<string name="kun_small_L1">��˪�������ʼ��Ҳ��ѱ������������Ҳ������֮����ֱ�Է�Ҳ����ϰ�޲������ص���Ҳ�����¿��꣬��ʱ��Ҳ��������£�֪���Ҳ�������޾̣�������Ҳ������Ԫ����������Ҳ����ս��Ұ�������Ҳ���������꣬�Դ���Ҳ��</string>
	<string name="kun_small_L2">����֮����ֱ�Է�Ҳ����ϰ�޲������ص���Ҳ��</string>
	<string name="kun_small_L3">���¿��꣬��ʱ��Ҳ��������£�֪���Ҳ��</string>
	<string name="kun_small_L4">�����޾̣�������Ҳ��</string>
	<string name="kun_small_L5">����Ԫ����������Ҳ��</string>
	<string name="kun_small_L6">��ս��Ұ�������Ҳ��</string>
	<string name="kun_small_Luse">�������꣬�Դ���Ҳ��</string>
	<string name="tun_name">ˮ���� ��������</string>
	<string name="tun_title">���͡���Ԫ�࣬���ꡣ�����������������</string>
	<string name="tun_1">���ţ��ͻ��������ꡣ�����</string>
	<string name="tun_2">����������߁�磬������硣�˿ܣ����š�Ů���겻�֣�ʮ�����֡�</string>
	<string name="tun_3">��������¹���ݣ�Ω�������У����Ӽ������ᣬ���ߡ�</string>
	<string name="tun_4">���ģ�������磬����š��������޲�����</string>
	<string name="tun_5">���壬����࣬С���꼪�������ס�</string>
	<string name="tun_6">������������磬��Ѫ���硣</string>
	<string name="tun_tuanci">�ͣ�����ʼ�����������������У�����ꡣ����֮����ӯ������������˽����������</string>
	<string name="tun_bigLike">���ף��ͣ������Ծ��ڡ�</string>
	<string name="tun_small_L1">���ͻ���־����Ҳ���Թ��¼��������Ҳ������֮�ѣ��˸�Ҳ��ʮ�����֣�����Ҳ����¹���ݣ��Դ���Ҳ��������֮��������Ҳ�����������Ҳ������࣬ʩδ��Ҳ����Ѫ���磬�οɳ�Ҳ��</string>
	<string name="tun_small_L2">�����Ҳ������֮�ѣ��˸�Ҳ��ʮ�����֣�����Ҳ��</string>
	<string name="tun_small_L3">��¹���ݣ��Դ���Ҳ��������֮��������Ҳ��</string>
	<string name="tun_small_L4">���������Ҳ��</string>
	<string name="tun_small_L5">����࣬ʩδ��Ҳ��</string>
	<string name="tun_small_L6">��Ѫ���磬�οɳ�Ҳ��</string>
	<string name="meng_name">ɽˮ�� ���Ͽ���</string>
	<string name="meng_title">���ɡ����ࡣ������ͯ�ɣ�ͯ�����ҡ����߸棬�����£����򲻸档���ꡣ</string>
	<string name="meng_1">���������ɣ��������ˣ���˵�����������ߡ�</string>
	<string name="meng_2">�Ŷ������ɣ������ɸ��������ӿ˼ҡ�</string>
	<string name="meng_3">����������ȡŮ������򣬲��й�����������</string>
	<string name="meng_4">���ģ����ɣ��ߡ�</string>
	<string name="meng_5">���壬ͯ�ɣ�����</string>
	<string name="meng_6">�Ͼţ����ɣ�����Ϊ�ܣ������ܡ�</string>
	<string name="meng_tuanci">�ɣ�ɽ�����գ��ն�ֹ���ɡ��ɺ࣬�Ժ���ʱ��Ҳ��������ͯ�ɣ�ͯ�����ң�־ӦҲ�����߸棬�Ը���Ҳ�������£����򲻸棬����Ҳ������������ʥ��Ҳ��</string>
	<string name="meng_bigLike">ɽ�³�Ȫ���ɣ������Թ������¡�</string>
	<string name="meng_small_L1">�������ˣ�������Ҳ���ӿ˼ң������Ҳ������ȡŮ���в�˳Ҳ������֮�ߣ���ԶʵҲ��ͯ��֮����˳����Ҳ���������ܣ�����˳Ҳ��</string>
	<string name="meng_small_L2">�ӿ˼ң������Ҳ��</string>
	<string name="meng_small_L3">����ȡŮ���в�˳Ҳ��</string>
	<string name="meng_small_L4">����֮�ߣ���ԶʵҲ��</string>
	<string name="meng_small_L5">ͯ��֮����˳����Ҳ��</string>
	<string name="meng_small_L6">�������ܣ�����˳Ҳ��</string>
	<string name="xu_name">ˮ���� ����Ǭ��</string>
	<string name="xu_title">���衷�����ڣ���ࡣ�꼪������󴨡�</string>
	<string name="xu_1">���ţ����ڽ������ú㣬�޾̡�</string>
	<string name="xu_2">�Ŷ�������ɳ��С���ԣ��ռ���</string>
	<string name="xu_3">�����������࣬�¿�����</string>
	<string name="xu_4">���ģ�����Ѫ������Ѩ��</string>
	<string name="xu_5">���壬���ھ�ʳ���꼪��</string>
	<string name="xu_6">����������Ѩ���в���֮������������֮�ռ���</string>
	<string name="xu_tuanci">�裬��Ҳ������ǰҲ���ս������ݣ����岻�����ӡ������ڣ�����꼪��λ����λ��������Ҳ������󴨣����й�Ҳ��</string>
	<string name="xu_bigLike">�������죬�裻��������ʳ���֡�</string>
	<string name="xu_small_L1">���ڽ�����������Ҳ�����ú��޾̣�δʧ��Ҳ������ɳ��������Ҳ����С���ԣ����ռ�Ҳ�������࣬������Ҳ�������¿ܣ���������Ҳ������Ѫ��˳����Ҳ����ʳ�꼪��������Ҳ������֮��������֮�ռ����䲻��λ��δ��ʧҲ��</string>
	<string name="xu_small_L2">����ɳ��������Ҳ����С���ԣ����ռ�Ҳ��</string>
	<string name="xu_small_L3">�����࣬������Ҳ�������¿ܣ���������Ҳ��</string>
	<string name="xu_small_L4">����Ѫ��˳����Ҳ��</string>
	<string name="xu_small_L5">��ʳ�꼪��������Ҳ��</string>
	<string name="xu_small_L6">����֮��������֮�ռ����䲻��λ��δ��ʧҲ��</string>
	<string name="song_name">��ˮ�� Ǭ�Ͽ���</string>
	<string name="song_title">���ϡ����������裬�м������ס��������ˡ�������󴨡�</string>
	<string name="song_1">�������������£�С���ԣ��ռ���</string>
	<string name="song_2">�Ŷ��������ϣ�����͡����������ٻ�������</string>
	<string name="song_3">������ʳ�ɵ£��������ռ���������£��޳�</string>
	<string name="song_4">���ģ������ϣ��������塣���꼪��</string>
	<string name="song_5">���壺�ϣ�Ԫ����</string>
	<string name="song_6">�Ͼţ�����֮�Q�����ճ�����֮��</string>
	<string name="song_tuanci">�ϣ��ϸ����գ��ն������ϡ��ϣ����ڡ��ϡ��衢�м�������������Ҳ�����ף��ϲ��ɳ�Ҳ���������ˣ�������Ҳ��������󴨣�����ԨҲ��</string>
	<string name="song_bigLike">����ˮΥ�У��ϣ�����������ıʼ��</string>
	<string name="song_small_L1">�������£��ϲ��ɳ�Ҳ����С���ԣ������Ҳ�������ϣ����ʹ�Ҳ���������ϣ�������Ҳ��ʳ�ɵ£����ϼ�Ҳ���������壬���겻ʧҲ����Ԫ����������Ҳ�������ܷ����಻�㾴Ҳ��</string>
	<string name="song_small_L2">��С���ԣ������Ҳ�������ϣ����ʹ�Ҳ���������ϣ�������Ҳ��</string>
	<string name="song_small_L3">ʳ�ɵ£����ϼ�Ҳ��</string>
	<string name="song_small_L4">�������壬���겻ʧҲ��</string>
	<string name="song_small_L5">��Ԫ����������Ҳ��</string>
	<string name="song_small_L6">�����ܷ����಻�㾴Ҳ��</string>
	<string name="shi_name">��ˮʦ ���Ͽ���</string>
	<string name="shi_title">��ʦ��������˼����޾̡�</string>
	<string name="shi_1">������ʦ�����ɣ�����ס�</string>
	<string name="shi_2">�Ŷ�����ʦ�м����޾̣�����������</string>
	<string name="shi_3">������ʦ����ʬ���ס�</string>
	<string name="shi_4">���ģ�ʦ��Σ��޾̡�</string>
	<string name="shi_5">���壬�����ݡ���ִ�ԣ��޾̡�����˧ʦ��������ʬ�����ס�</string>
	<string name="shi_6">��������������������мң�С�����á�</string>
	<string name="shi_tuanci">ʦ����Ҳ���꣬��Ҳ�������������������ӡ����ж�Ӧ�����ն�˳���Դ˶����£������֮�����ֺξ��ӡ�</string>
	<string name="shi_bigLike">������ˮ��ʦ���������������ڡ�</string>
	<string name="shi_small_L1">ʦ�����ɣ�ʧ����Ҳ����ʦ�м��������Ҳ�����������������Ҳ��ʦ����ʬ�����޹�Ҳ������޾̣�δʧ��Ҳ������˧ʦ��������Ҳ��������ʬ��ʹ����Ҳ�����������������Ҳ��С�����ã����Ұ�Ҳ��</string>
	<string name="shi_small_L2">��ʦ�м��������Ҳ�����������������Ҳ��</string>
	<string name="shi_small_L3">ʦ����ʬ�����޹�Ҳ��</string>
	<string name="shi_small_L4">����޾̣�δʧ��Ҳ��</string>
	<string name="shi_small_L5">����˧ʦ��������Ҳ��������ʬ��ʹ����Ҳ��</string>
	<string name="shi_small_L6">���������������Ҳ��С�����ã����Ұ�Ҳ��</string>
	<string name="bi_name">ˮ�ر� ��������</string>
	<string name="bi_title">���ȡ�������ԭ�ߣ�Ԫ�����꣬�޾̡���������������ס�</string>
	<string name="bi_1">���������ڱ�֮���޾̡�����ӯ󾣬��������������</string>
	<string name="bi_2">��������֮���ڣ��꼪��</string>
	<string name="bi_3">��������֮���ˡ�</string>
	<string name="bi_4">���ģ����֮���꼪��</string>
	<string name="bi_5">���壬�Աȣ�����������ʧǰ�ݣ����˲��룬����</string>
	<string name="bi_6">��������֮���ף��ס�</string>
	<string name="bi_tuanci">�ȣ���Ҳ���ȣ���Ҳ����˳��Ҳ��ԭ�ߣ�Ԫ���꣬�޾̣��Ը���Ҳ����������������ӦҲ������ף������Ҳ��</string>
	<string name="bi_bigLike">������ˮ���ȣ������Խ����������</string>
	<string name="bi_small_L1">��֮������������Ҳ����֮���ڣ�����ʧҲ����֮���ˣ������˺���������ͣ��Դ���Ҳ���Ա�֮����λ����Ҳ������ȡ˳��ʧǰ��Ҳ�����˲��룬��ʹ��Ҳ����֮���ף�������Ҳ��</string>
	<string name="bi_small_L2">��֮���ڣ�����ʧҲ��</string>
	<string name="bi_small_L3">��֮���ˣ������˺���</string>
	<string name="bi_small_L4">������ͣ��Դ���Ҳ��</string>
	<string name="bi_small_L5">�Ա�֮����λ����Ҳ������ȡ˳��ʧǰ��Ҳ�����˲��룬��ʹ��Ҳ��</string>
	<string name="bi_small_L6">��֮���ף�������Ҳ��</string>
	<string name="xiaoxu_name">����С�� ����Ǭ��</string>
	<string name="xiaoxu_title">��С�󡷣��ࡣ���Ʋ��ꡣ����������</string>
	<string name="xiaoxu_1">���ţ����Ե�������̣�����</string>
	<string name="xiaoxu_2">�Ŷ���ǣ��������</string>
	<string name="xiaoxu_3">��������˵�������޷�Ŀ��</string>
	<string name="xiaoxu_4">���ģ����ڣ�Ѫȥ������޾̡�</string>
	<string name="xiaoxu_5">���壬�������磬�������ڡ�</string>
	<string name="xiaoxu_6">�Ͼţ�����ȴ����е��ء����������¼������������ס�</string>
	<string name="xiaoxu_tuanci">С�����λ������Ӧ֮��ԻС�󡣽����㣬���ж�־�У��˺ࡣ���Ʋ��꣬����Ҳ������������ʩδ��Ҳ��</string>
	<string name="xiaoxu_bigLike">�������ϣ�С�󣻾�����ܲ�ĵ¡�</string>
	<string name="xiaoxu_small_L1">���Ե������弪Ҳ��ǣ�����У��಻��ʧҲ�����޷�Ŀ����������Ҳ������������Ϻ�־Ҳ���������磬������Ҳ������ȴ����»���Ҳ���������ף�������Ҳ��</string>
	<string name="xiaoxu_small_L2">ǣ�����У��಻��ʧҲ��</string>
	<string name="xiaoxu_small_L3">���޷�Ŀ����������Ҳ��</string>
	<string name="xiaoxu_small_L4">����������Ϻ�־Ҳ��</string>
	<string name="xiaoxu_small_L5">�������磬������Ҳ��</string>
	<string name="xiaoxu_small_L6">����ȴ����»���Ҳ���������ף�������Ҳ��</string>
	<string name="lv_name">������ Ǭ�϶���</string>
	<string name="lv_title">���ġ����Ļ�β�����A�ˡ��ࡣ</string>
	<string name="lv_1">���ţ����������޾̡�</string>
	<string name="lv_2">�Ŷ����ĵ�̹̹�������꼪��</string>
	<string name="lv_3">�����������ӣ������ģ��Ļ�β���A�ˣ��ס�����Ϊ�ڴ����</string>
	<string name="lv_4">���ģ��Ļ�β����壬�ռ���</string>
	<string name="lv_5">���壬���ģ�������</string>
	<string name="lv_6">�Ͼţ����Ŀ��飬����Ԫ����</string>
	<string name="lv_tuanci">�ģ����ĸ�Ҳ��˵��Ӧ��Ǭ�������Ļ�β�����A�ˣ��ࡣ���������ĵ�λ�����Σ�����Ҳ��</string>
	<string name="lv_bigLike">���������ģ������Ա����£�����־��</string>
	<string name="lv_small_L1">����֮��������ԸҲ�������꼪���в�����Ҳ�������ӣ�����������Ҳ�������ģ�����������Ҳ���A��֮�ף�λ����Ҳ������Ϊ�ڴ����־��Ҳ������ռ���־��Ҳ������������λ����Ҳ��Ԫ�����ϣ�������Ҳ��</string>
	<string name="lv_small_L2">�����꼪���в�����Ҳ��</string>
	<string name="lv_small_L3">�����ӣ�����������Ҳ�������ģ�����������Ҳ���A��֮�ף�λ����Ҳ��</string>
	<string name="lv_small_L4">����Ϊ�ڴ����־��Ҳ������ռ���־��Ҳ��</string>
	<string name="action_updateAPK">Update</string>
</resources>